# SLP-Project2

./: .gitignore  README.md  main.py  pyproject.toml  report.tex
configs/: final_prompt.json  prompt1.json  prompt10.json  prompt11.json  prompt12.json  prompt13.json  prompt14.json  prompt15.json  prompt16.json  prompt17.json  prompt18.json  prompt19.json  prompt2.json  prompt20.json  prompt21.json  prompt22.json  prompt23.json  prompt24.json  prompt25.json  prompt26.json  prompt27.json  prompt28.json  prompt29.json  prompt3.json  prompt31.json  prompt32.json  prompt33.json  prompt34.json  prompt35.json  prompt4.json  prompt5.json  prompt6.json  prompt7.json  prompt8.json  prompt9.json
data/SLP_project02_data/release_dev/: gold.jsonl
results/test-260616-topk4-p_id30-n_token200/: config.json  predictions.jsonl
scripts/: run_dev.sh  run_test.sh
src/: asr.py  evaluate.py  llm.py  retriever.py
